--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Stop Watch</title>
+    <title>25 + 5 Clock</title>
   </head>
-  <body>
+  <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="container-fluid"></div>
     
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    
   </body>
 </html>
